# emissions-oracle

./: .pre-commit-config.yaml  Makefile  README.md  data_science_pipeline.html  genindex.html  ghg_emissions.html  index.html  objects.inv  project_assumptions.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
conf/base/: EIA_API_ids.yml  catalog.yml  config_streamlit.toml  eia_api_ids.yml  emissions_factors.yml  states.yml
data/06_reporting/Combined_Forecasts/: Combined-Electricity-Generation-All-States.csv
docs/: Makefile
docs/source/: appendix.md  conf.py  data_science_pipeline.rst  ghg_emissions.rst  index.rst  project_assumptions.rst
notebooks/: 0.1-initial-api-calls-exploration.ipynb  0.2-raw-intermediate-data-setup.ipynb  0.4-data-preprocessing-before-modelling.ipynb  0.5-create-base-models-and-forecasts.ipynb  0.6-emissions-data-on-map.ipynb
src/: __init__.py  pipeline.py  requirements.txt  setup.py  streamlit_app.py
src/d00_utils/: const.py  utils.py
src/d01_data/: get_raw_data.py  get_raw_data_outdated.py
src/d02_intermediate/: clean_raw_data.py
src/d03_processing/: create_model_input.py
src/d04_modelling/: create_prophet_models.py
src/d06_reporting/: calculate_emissions.py  create_forecasts.py
src/d06_visualization/: plot.py
src/emissions_oracle/: __init__.py  __main__.py  settings.py
src/streamlit_pages/: appendix.py  emissions_on_map.py  multi_region_analysis.py  multipage.py  single_region_analysis.py  tabular_views.py  test_page.py  total_net_gen.py
src/tests/: test_run.py
(+2901 files in other folders)
