[metadata]
name = Emission ORracle
summary = Python tool
author = Devansh Malik
author-email = malik.devansh95@gmail.com
license = apache
home-page = github.com
description-file = README.md

[flake8]
filename = src/*.py
extend-ignore =
  E203, # Whitespace before ':'
  W503, # Line break occurred before a binary operator
  D301  # Use r”“” if any backslashes in a docstring
max-line-length = 100
docstring-convention = numpy
max-complexity = 24
;per-file-ignores =
;   blah/blah/__init__.py:F401

[mypy]
python_version = 3.8
ignore_missing_imports = True
allow_redefinition = True
ignore_errors = True
files = ./src
